[package]
name = "sqlant"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kurotych/sqlant"
keywords = ["cli", "sql", "plantuml", "postgresql", "mermaid"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "Generate PlantUML/Mermaid ER diagram textual description from SQL connection string"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]

[dependencies]
postgres = "0.19.4"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
clap = "4.1.4"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true
