[package]
name = "sqlant"
version = "0.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kurotych/sqlant"
keywords = ["cli", "sql", "plantuml", "postgresql", "mermaid"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "Generate PlantUML/Mermaid ER diagram textual description from SQL connection string"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4", optional = true }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.13"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true

[[bin]]
name = "sqlant"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["vendored-tls", "cli"]
vendored-tls = ["native-tls/vendored"]
cli = ["dep:clap"]
